add files by wangpengfei

--- a/App/View/Home/user_see.html
+++ b/App/View/Home/user_see.html
@@ -39,6 +39,7 @@
       </div>
     </div>
   </div>
+  <div class="mmsg-box mmsg-box-info" style="margin-top: -23.5px; margin-left: -96.5px;"><div class="mmsg-content"><i class="mmsg-icon"></i><p>资料修改成功！</p></div><div class="mmsg-background"></div></div>
   <%- include ../footer.html %>
   <script>seajs.use('js/user/set');</script>
 </body>
