--- a/www/resource/css/forget.css
+++ b/www/resource/css/forget.css
@@ -244,3 +244,39 @@
   background-color: #00d747;
   border-color: #00d747;
 }
+.mmsg-box{
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  border: 2px solid #fff;
+  border-radius: 2px;
+  -webkit-box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    -moz-box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  z-index: 9999;
+}
+.mmsg-background{
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  opacity: 0.9;
+  filter:alpha(opacity=90);
+  z-index: -1;
+}
+.mmsg-content{padding: 10px 20px 10px 47px; font-size: 18px;color: #fff;}
+.mmsg-icon{position: absolute;top:10px;left:10px;width: 30px;height: 30px; background: url(../img/msgbox-sprite.png) no-repeat;}
+.mmsg-box-info .mmsg-background{
+  background: #2ea7e0;
+}
+.mmsg-box-info .mmsg-icon{
+  background-position: 0 -40px;
+}
+.mmsg-box-error .mmsg-background{
+  background: #be3948;
+}
+.mmsg-box-error .mmsg-icon{
+  background-position: 0 0;
+}
