add files by wangpengfei

--- a/App/View/Home/partner_index.html
+++ b/App/View/Home/partner_index.html
@@ -5,6 +5,21 @@
 </head>
 <body>
   <%- include ../header.html %>
+  <div class="container">
+    <h1 class="p-title text-center">我们的合作伙伴</h1>
+    <div class="row">
+    <%partners.forEach(function(val){%>
+      <div class="col-md-2 col-xs-6">
+        <a href="/partner/view" class="p-item">
+          <div class="p-logo">
+            <img src="/resource/img/h/<%= val.img%>" alt="<%= val.name%>" width="120" height="120">
+          </div>
+          <div class="p-name text-center"><%= val.name%></div>
+        </a>
+      </div>
+    <%})%>
+    </div>
+  </div>
   <%- include ../footer.html %>
 </body>
 </html>
