--- a/App/View/footer.html
+++ b/App/View/footer.html
@@ -1,4 +1,4 @@
-<footer class="bs-docs-footer" id="footer" role="contentinfo">
+<footer class="bs-docs-footer" id="footer">
   <div class="footer-sns text-center">
     <a href="http://weibo.com/u" class="sns-weibo" target="_blank" title="新浪微博"></a>
     <a href="javascript:void(0);" class="sns-weixin" target="_blank" title="微信">
