--- a/App/View/footer.html
+++ b/App/View/footer.html
@@ -16,6 +16,7 @@
   <div class="footer-copyright text-center">© 2015 nebulafe.com  京ICP备15012781号-1</div>
 </footer>
 <script src="http://libs.baidu.com/jquery/1.7.1/jquery.min.js"></script>
+<script src="http://libs.baidu.com/underscore/1.3.3/underscore-min.js"></script>
 <script src="http://libs.baidu.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 <script src="http://a.tbcdn.cn/libs/seajs/1.1.0/sea.js"></script>
 <script>
