--- a/App/View/Home/partner_view.html
+++ b/App/View/Home/partner_view.html
@@ -16,8 +16,8 @@
         <img src="/resource/img/square.png" alt="" width="180" height="180">
       </div>
       <div class="p-summary">
-        <h3>爱丁堡大学</h3>
-        <p>Delivering excellence in teaching and learning. Consistently ranked as one of the world's top 50 universities and top 3 UK provider of online Masters courses. The University of Edinburgh offers over 700 diverse degree programmes with over 31,000 students currently studying with us from across the world.</p>
+        <h3><%=partner[0].name%></h3>
+        <p><%=partner[0].introduction%></p>
       </div>
     </div>
     <div class="p-courese ad-courses">
