--- a/App/View/Home/course_view.html
+++ b/App/View/Home/course_view.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <%- include ../meta.html %>
+  <link href="//vjs.zencdn.net/4.12/video-js.css" rel="stylesheet">
 </head>
 <body>
   <%- include ../header.html %>
@@ -12,6 +13,7 @@
         <div class="col-sm-12 col-md-6">
           <a href="/jhu" class="c-partner-logo"><img src="/resource/img/p/bloomberg.small.png" alt="Johns Hopkins University"></a>
           <h1><%=course.name%></h1>
+          <em class="test-vedio" id="test_vedio" data-src="http://finace-english.oss-cn-beijing.aliyuncs.com/Unit1.mp4">测试</em>
           <h3>隶属于&nbsp;<a href="/specialization/jhudatascience/1?utm_medium=courseDescripTop">数据科学 专项课程 »</a></h3>
           <p><%=course.introduction%></p>
         </div>
@@ -100,5 +102,6 @@
     </div>
   </div>
   <%- include ../footer.html %>
+  <script src="//vjs.zencdn.net/4.12/video.js"></script>
 </body>
 </html>
