add files by wangpengfei

--- a/App/View/Home/course_view.html
+++ b/App/View/Home/course_view.html
@@ -13,7 +13,7 @@
         <div class="col-sm-12 col-md-6">
           <a href="/jhu" class="c-partner-logo"><img src="/resource/img/p/bloomberg.small.png" alt="Johns Hopkins University"></a>
           <h1><%=course.name%></h1>
-          <em class="test-vedio" id="test_vedio" data-src="http://finace-english.oss-cn-beijing.aliyuncs.com/Unit1.mp4">测试</em>
+          <a class="btn btn-success" href="/course/video?id=<%=course.id%>">进入学习</a>
           <h3>隶属于&nbsp;<a href="/specialization/jhudatascience/1?utm_medium=courseDescripTop">数据科学 专项课程 »</a></h3>
           <p><%=course.introduction%></p>
         </div>
