--- a/App/View/Home/course_video.html
+++ b/App/View/Home/course_video.html
@@ -6,6 +6,7 @@
 </head>
 <body>
   <%- include ../header.html %>
+  <% var course = course[0]%>
   <div class="container">
     <h1><%=course.name%></h1>
     <div id="jp_container_1" class="jp-video jp-video-360p" role="application" aria-label="media player">
