add files by wangpengfei

--- a/App/View/Home/course_view.html
+++ b/App/View/Home/course_view.html
@@ -13,7 +13,7 @@
         <div class="col-sm-12 col-md-6">
           <a href="/partner/view/<%=partner.id%>" class="c-partner-logo"><img src="/resource/img/h_long/<%=partner.small_img%>" alt="<%=partner.name%>"></a>
           <h1><%=course.name%></h1>
-          <a class="btn btn-success" href="/course/video?id=<%=course.id%>">进入学习</a>
+          <a class="btn btn-success" href="javascript:void(0);" data-href="/course/video?id=<%=course.id%>" id="start_learn">进入学习</a>
           <h3>隶属于&nbsp;<a><%=course.tag%></a></h3>
           <p><%=course.introduction%></p>
         </div>
@@ -84,8 +84,6 @@
     <div id="video_container"></div>
   </div>
   <%- include ../footer.html %>
-  <script>seajs.use('js/widget/jquery.plugin.js')</script>
-  <script>seajs.use('js/widget/jquery.video.js')</script>
   <script>seajs.use('js/course/view.js')</script>
 </body>
 </html>
