add files by wangpengfei

--- a/App/View/Home/index_index.html
+++ b/App/View/Home/index_index.html
@@ -30,7 +30,7 @@
             </span>
             <em><%= val.name %></em>
           </a>
-          <p><%= val.source %>" • "<%= val.time %></p>
+          <p><%= val.source %> • <%= val.time %></p>
         </div>
       </div>
       <%})%>
