add files by wangpengfei

--- a/App/View/Home/index_index.html
+++ b/App/View/Home/index_index.html
@@ -26,7 +26,7 @@
         <div class="thumbnail">
           <a href="/course/view?id=13" target="_blank">
             <span class="course-img">
-              <img src="/resource/img/k/<%= val.img %>" alt="<%= val.name %>">
+              <img src="http://n-course.oss-cn-beijing.aliyuncs.com/pic/<%= val.img %>" alt="<%= val.name %>">
             </span>
             <em><%= val.name %></em>
           </a>
