--- a/App/View/Home/partner_index.html
+++ b/App/View/Home/partner_index.html
@@ -12,7 +12,7 @@
       <div class="col-md-2 col-xs-6">
         <a href="/partner/view/<%=val.id%>" class="p-item">
           <div class="p-logo">
-            <img src="/resource/img/h/<%= val.img%>" alt="<%= val.name%>" width="120" height="120">
+            <img src="http://n-partner.oss-cn-beijing.aliyuncs.com/logo_120/<%= val.img%>" alt="<%= val.name%>" width="120" height="120">
           </div>
           <div class="p-name text-center"><%= val.name%></div>
         </a>
