--- a/App/View/Home/course_view.html
+++ b/App/View/Home/course_view.html
@@ -6,12 +6,12 @@
 </head>
 <body>
   <%- include ../header.html %>
-  <% var partner = partner[0]%>
+  <% var partner = partner[0];var resource = resource[0]%>
   <div class="container">
     <div class="c-course">
       <div class="row">
         <div class="col-sm-12 col-md-6">
-          <a href="/partner/view/<%=partner.id%>" class="c-partner-logo"><img src="/resource/img/h_long/<%=partner.small_img%>" alt="<%=partner.name%>"></a>
+          <a href="/partner/view/<%=partner.id%>" class="c-partner-logo"><img src="http://n-partner.oss-cn-beijing.aliyuncs.com/logo_long/<%=partner.long_img%>" alt="<%=partner.name%>"></a>
           <h1><%=course.name%></h1>
           <a class="btn btn-success" href="javascript:void(0);" data-href="/course/video?id=<%=course.id%>" id="start_learn">进入学习</a>
           <h3>隶属于&nbsp;<a><%=course.tag%></a></h3>
@@ -19,9 +19,9 @@
         </div>
         <div class="col-sm-12 col-md-6">
             <div class="c-vedio-container">
-              <video height="254" width="100%" data-js="previewVideo" preload="metadata" controls="controls" poster="/resource/img/k/6.jpg">
-                <source type="video/mp4" src="https://d1a2y8pfnfh44t.cloudfront.net/8cc4a550851211e3b08b6f8923cff007/full/540p/index.mp4">
-                <source type="video/webm" src="https://d1a2y8pfnfh44t.cloudfront.net/8cc4a550851211e3b08b6f8923cff007/full/540p/index.webm">
+              <video height="254" width="100%" data-js="previewVideo" preload="metadata" controls="controls" poster="<%-resource.poster%>">
+                <source type="video/ogv" src="<%-resource.ogv%>">
+                <source type="video/webm" src="<%-resource.webmv%>">
               </video>
             </div>
         </div>
@@ -68,7 +68,7 @@
           <div class="course-teacher">
           <%teachers.forEach(function(teacher){%>
             <div class="col-sm-6 col-md-4">
-               <a href="" class="teacher-pic"><img src="/resource/img/t/<%=teacher.img%>" width="80" height="114"></a>
+               <a href="" class="teacher-pic"><img src="http://n-teacher.oss-cn-beijing.aliyuncs.com/cft/<%=teacher.img%>" width="80" height="114"></a>
                 <h3>
                   <a><%=teacher.name%></a>
                 </h3>
