--- a/App/View/Home/partner_view.html
+++ b/App/View/Home/partner_view.html
@@ -8,13 +8,13 @@
   <% var partner = partner[0]%>
   <div class="partner">
     <div class="p-bg">
-      <div class="p-bg-banner"></div>
+      <div class="p-bg-banner" style="background-image:url(http://n-partner.oss-cn-beijing.aliyuncs.com/banner/<%- partner.banner%>);"></div>
     </div>
   </div>
   <div class="container">
     <div class="p-preview">
       <div class="p-logo">
-        <img src="/resource/img/h_180/<%=partner.img%>" alt="" width="180" height="180">
+        <img src="http://n-partner.oss-cn-beijing.aliyuncs.com/logo/<%=partner.img%>" alt="" width="180" height="180">
       </div>
       <div class="p-summary">
         <h3><%=partner.name%></h3>
@@ -28,7 +28,7 @@
         <div class="thumbnail">
           <a href="/course/view?id=<%=val.id%>" target="_blank">
             <span class="course-img">
-              <img src="/resource/img/k/<%= val.img %>" alt="<%= val.name %>">
+              <img src="http://n-course.oss-cn-beijing.aliyuncs.com/pic/<%= val.img %>" alt="<%= val.name %>">
             </span>
             <em><%= val.name %></em>
           </a>
