add files by wangpengfei

--- a/App/View/Home/course_view.html
+++ b/App/View/Home/course_view.html
@@ -20,8 +20,9 @@
         <div class="col-sm-12 col-md-6">
             <div class="c-vedio-container">
               <video height="254" width="100%" data-js="previewVideo" preload="metadata" controls="controls" poster="<%-resource.poster%>">
-                <source type="video/ogv" src="<%-resource.ogv%>">
                 <source type="video/webm" src="<%-resource.webmv%>">
+                <source type="video/mp4" src="<%-resource.m4v%>">
+                <source type="video/ogv" src="<%-resource.ogv%>">
               </video>
             </div>
         </div>
