add files by wangpengfei

--- a/App/View/footer.html
+++ b/App/View/footer.html
@@ -1,17 +1,15 @@
 <footer class="bs-docs-footer" id="footer">
   <div class="footer-sns text-center">
-    <a href="http://weibo.com/u" class="sns-weibo" target="_blank" title="新浪微博"></a>
-    <a href="javascript:void(0);" class="sns-weixin" target="_blank" title="微信">
+    <a href="http://weibo.com/u/5585851057" class="sns-weibo" target="_blank" title="新浪微博"></a>
+    <a href="javascript:void(0);" class="sns-weixin" target="_blank" title="微信" style="display:none;">
       <i class="sns-weixin-expand"></i>
     </a>
   </div>
   <div class="footer-links text-center">
-    <a href="/about/us" title="关于我们">关于我们</a>
-    <a href="/about/job" title="人才招聘">人才招聘</a>
-    <a href="/about/recruit" title="讲师招募">讲师招募</a>
-    <a href="/about/contact" title="联系我们">联系我们</a>
-    <a href="/about/feedback" title="意见反馈">意见反馈</a>
-    <a href="/about/friend" title="人才招聘">友情链接</a>
+    <a href="/about" title="关于我们">关于我们</a>
+    <a href="/about/joinus" title="人才招聘">加入我们</a>
+    <a href="mailto:service@nebulafe.com" title="联系我们">联系我们</a>
+    <a href="http://weibo.com/u/5585851057" title="关注我们" target="_blank">关注我们</a>
   </div>
   <div class="footer-copyright text-center">© 2015 nebulafe.com  京ICP备15012781号-1</div>
 </footer>
