add files by wangpengfei

--- a/App/View/Home/index_index.html
+++ b/App/View/Home/index_index.html
@@ -24,7 +24,7 @@
       <%courses.forEach(function(val){%>
       <div class="col-sm-6 col-md-4">
         <div class="thumbnail">
-          <a href="/course/view?id=13" target="_blank">
+          <a href="/course/view?id=<%= val.id%>" target="_blank">
             <span class="course-img">
               <img src="http://n-course.oss-cn-beijing.aliyuncs.com/pic/<%= val.img %>" alt="<%= val.name %>">
             </span>
