--- a/App/View/Home/index_index.html
+++ b/App/View/Home/index_index.html
@@ -11,7 +11,7 @@
         <div class="masthead-bg"></div>
         <div class="container">
           <div class="carousel-caption">
-            <h1>Nebula F&E</h1>
+            <h1>星云金融与经济在线</h1>
             <h3 class="gray">专业的金融与经济在线学习平台</h3>
             <p><a href="/course" class="btn btn-lg btn-primary btn-shadow bs3-link">开始学习</a></p>
           </div>
