--- a/App/View/Home/about_index.html
+++ b/App/View/Home/about_index.html
@@ -18,7 +18,7 @@
       <div class="panel panel-default panel-primary">
         <div class="panel-heading">关于我们</div>
         <div class="panel-body">
-          诞生于于公元二零一五年的炎炎夏日，由几位的平凡的年轻人打造。愿自竹筏而成海舟，与更多同伴一齐航行于梦想的海洋。
+          诞生于公元二零一五年的炎炎夏日，由几位平凡的年轻人打造。愿自竹筏而成海舟，与更多同伴一齐航行于梦想的海洋。
         </div>
       </div>
       <div class="panel panel-default panel-primary">
