add files by wangpengfei

--- a/App/View/Home/about_joinus.html
+++ b/App/View/Home/about_joinus.html
@@ -18,7 +18,7 @@
       <div class="panel panel-default panel-primary">
         <div class="panel-heading">加入我们</div>
         <div class="panel-body">
-          诚邀加盟星云!<br>在这里，我们一起学习、工作，一起沉淀、分享，一起努力，为金融经济教育这个行业贡献影响。<br>我们只有做出更好的课程，拿出更好的产品体验，才能对得起各位星云同学的喜爱。
+          诚邀加盟星云!<br>在这里，我们一起学习、工作，一起沉淀、分享，一起努力，为金融经济教育这个行业贡献影响。<br>作为一个初创团队，我们推崇富有创造力且兼顾效率的工作方式，让每个人的才能都能得到最大程度的发挥。<br>不论你是一丝不苟的专业人士还是天马行空的艺术家、是九岁就大学毕业的超级神童还是一次次在考试中挣扎走到现在的问题学生、是奉行有钱能使鬼推磨的现实主义者还是以世界和平为己任的理想主义者，只要我们谈得来，愿意为了一个共同目标而努力，那么星云的大门永远是向你敞开的。
         </div>
       </div>
       <div class="panel panel-default panel-primary">
