--- a/App/View/Home/course_video.html
+++ b/App/View/Home/course_video.html
@@ -8,7 +8,7 @@
   <%- include ../header.html %>
   <% var course = course[0]%>
   <div class="container">
-    <h1><%=course.name%></h1>
+    <h1 id="course_name"><%=course.name%></h1>
     <div id="jp_container_1" class="jp-video jp-video-360p" role="application" aria-label="media player">
       <div class="jp-type-playlist">
         <div id="jquery_jplayer_1" class="jp-jplayer"></div>
